<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingVertical="40dp"
    >

    <EditText
        android:id="@+id/number1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:autofillHints=""
        android:hint="@string/first_hint"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/number2"
        android:layout_height="50sp"
        android:layout_width="match_parent"
        android:autofillHints=""
        android:hint="@string/second_hint"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/number3"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:autofillHints=""
        android:hint="@string/third_hint"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:id="@+id/sum"
        android:text="@string/add_all_three"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subtract"
        android:text="@string/subtract_all_three"
        />
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_result_is"
        />

</LinearLayout>